--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,15 @@
-spring.data.mongodb.database=bezkoder_db
+spring.data.mongodb.database=safeobserve
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
+
 
 # App Properties
 bezkoder.app.jwtSecret= bezKoderSecretKey
 bezkoder.app.jwtExpirationMs= 86400000
+
+spring.mail.host =smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=vrairaaufabidi@gmail.com
+spring.mail.password=pymlilhvpmwfgldo
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
