--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,9 @@ spring.data.mongodb.database=safeobserve
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 
+spring.servlet.multipart.max-file-size=256MB
+spring.servlet.multipart.max-request-size=256MB
+spring.servlet.multipart.enabled=true
 
 # App Properties
 bezkoder.app.jwtSecret= bezKoderSecretKey
